# movu

./: .dockerignore  .env.production.example  .gitignore  Caddyfile  DEPLOYMENT.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
services/rag/: .dockerignore  Dockerfile  package.json  pyproject.toml  requirements.txt
services/rag/.cache/: AfCFTA-Treaty.pkl  AfCFTA-Treaty_summary.pkl  CPC-Guide.pkl  CPC-Guide_summary.pkl  Cofounder-Deck.pkl  Cofounder-Deck_summary.pkl  Completion-of-Goods-Declarations-External-Annexure.pkl  Completion-of-Goods-Declarations-External-Annexure_summary.pkl  EN-APPENDIX-IV-AS-AT-COM-12-DECEMBER-2023.pkl  EN-APPENDIX-IV-AS-AT-COM-12-DECEMBER-2023_summary.pkl  EN-AfCFTA-e-Tariff-Book-User-Guide.pkl  EN-AfCFTA-e-Tariff-Book-User-Guide_summary.pkl  Incoterms-2020-Chart with-table.pkl  Incoterms-2020-Chart with-table_summary.pkl  MOVU-Prototype-Screens-Brief.pkl  MOVU-Prototype-Screens-Brief_summary.pkl  SARS-CPC-Guide.pkl  SARS-CPC-Guide_summary.pkl  SC-CF-55-A09-Customs-Status-Response-Messages-External-Annexure.pkl  SC-CF-55-A09-Customs-Status-Response-Messages-External-Annexure_summary.pkl  SC-CF-55-Goods-Declaration-External-Policy.pkl  SC-CF-55-Goods-Declaration-External-Policy_summary.pkl  Zambia-Import-Tariff .pkl  Zambia-Import-Tariff _summary.pkl  Zambia-User-Guidelines-for-AIR-CARGO-FREIGHT-FORWARDERS.pkl  Zambia-User-Guidelines-for-AIR-CARGO-FREIGHT-FORWARDERS_summary.pkl  embedded_docs.json
services/rag/docs/: MOVU-Prototype-Screens-Brief.docx  Zambia-Import-Tariff .xlsx
(+112 files in other folders)
